ensure homepage header aligns center

--- a/express/code/blocks/gen-ai-cards/gen-ai-cards.css
+++ b/express/code/blocks/gen-ai-cards/gen-ai-cards.css
@@ -328,8 +328,14 @@ main .gen-ai-cards.homepage .carousel-container .carousel-fader-right {
   font-size: var(--heading-font-size-m);
 }
 
-.gen-ai-cards.homepage .gen-ai-cards-heading-section h2,
-.gen-ai-cards .gen-ai-cards-heading-section p {
+.gen-ai-cards.homepage:not(.spotlight) .gen-ai-cards-heading-section h2,
+.gen-ai-cards.homepage:not(.spotlight) .gen-ai-cards-heading-section p {
+  text-align: center;
+  max-width: none;
+}
+
+.gen-ai-cards.homepage.spotlight .gen-ai-cards-heading-section h2,
+.gen-ai-cards.homepage.spotlight .gen-ai-cards-heading-section p {
   text-align: left;
   max-width: none;
 }
